--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 /* Basic Style */
+
 .main {
   background-color: #f8f8f8;
   color: #333;
@@ -22,7 +23,7 @@
 
 @media (max-width:768px) {
 
-  .matrix { 
+  .matrix {
     text-align: center;
   }
 
@@ -49,11 +50,13 @@ ul {
   padding: 0px;
 }
 
-li, h3 {
+li,
+h3 {
   list-style: none;
 }
 
-input,button{
+input,
+button {
   outline: none;
 }
 
@@ -123,22 +126,22 @@ li {
   align-items: center;
 }
 
-li > * {
+li>* {
   vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+li>input[type="checkbox"] {
   margin: 0 10px;
 }
 
-li > label {
+li>label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
 
-li >    input[type="text"] {
+li>input[type="text"] {
   width: 226px;
 }
 
