--- a/style.css
+++ b/style.css
@@ -6,14 +6,14 @@
   font-family: Lato, sans-serif;
 }
 
-.matrix {
+.eisenhower_matrix {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
 
-.matrix img {
+.eisenhower_matrix img {
   width: 100%;
 }
 
@@ -29,7 +29,7 @@
 
 }
 
-.main-page {
+.todo-list {
   display: block;
   width: 500px;
   margin: 0 auto;
